--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="simple_Grid-Framework/css/simplegrid.css">
         <meta charset="utf-8">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <title>TIFY</title>
+        <title>TINY</title>
 	</head>
 	<body>
 		<header class="back">
